--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -20,35 +20,38 @@ bashoneliners.com
 
 <p>
 Welcome to <strong>bashoneliners.com</strong>,
-a collection of shell script tips and tricks on a single line
-that can be very useful in
+a collection of <strong>high quality and well-explained bash one-liners</strong>
+that can be useful in
 GNU/Linux, UNIX, BSD, and similar systems.
-Post your cool bash one-liners to share with the world,
-or search our database of existing one-liners contributed by others.
+Post your cool bash one-liners to share with the world and promote scripting best practices.
+Or you can search our database of existing one-liners contributed by others.
 </p>
 
 <p>
 Shell scripting can be an ugly business.
-It is easy to write quick and dirty hacks that only a few hardcore hackers understand.
-Our goal is to gather nicely written,
-clean, well-explained one-liners
+It is easy to write quick and dirty, poor quality hacks that only a few hardcore hackers understand.
+Our goal is to gather high quality, clean, nicely written,
+well-explained one-liners
 that conform to today's best practices,
 and do something useful in real life.
-Or just pure awesome and wicked cool, that's ok too.
+Either that, or pure awesome wicked cool one-liners can be OK too.
 </p>
 
 <p>
 To get the latest bash one-liners, follow our <a href="{% url 'oneliners.feeds.oneliner' %}">rss feed</a>
 or <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter.
-If you discover bugs, you can either <a href="https://github.com/janosgyerik/bashoneliners/issues">report it on GitHub</a>,
+If you discover problems,
+you can either <a href="https://github.com/janosgyerik/bashoneliners/issues">report bugs on GitHub</a>,
 or send an email to our <a href="mailto:bashoneliners@googlegroups.com">public mailing list</a>,
 or send us a <a href="mailto:info@bashoneliners.com">private email</a>.
 </p>
 
 <div class="alert alert-block alert-info">
 The site is still pretty far from what we want it to be.
-Mainly we need more Django coders.
-At the minimum it would be great help if you could spread the word and talk about this site on Twitter, Google+, Facebook, all your social outlets.
+Mainly we need more Django coders,
+but also reviewers and helpful comments on the not-so-well-written one-liners.
+At the minimum it would help a lot if you could spread the word and talk about this site on Twitter, Google+, Facebook,
+or your other social outlets. All of them.
 If you want to help with coding in Django,
 please take a look at our <a href="{% url 'oneliners.views.sourcecode' %} ">Source code page</a>.
 </div>
