--- a/oneliners/templates/oneliners/pages/sourcecode.html
+++ b/oneliners/templates/oneliners/pages/sourcecode.html
@@ -7,9 +7,9 @@
 {% block content %}
 
 <p>
-The purpose of this page is to give you all the links,
+This page should give you all the links,
 resources and contact info that you might need to participate in this project.
-Do <a href="mailto:info@bashoneliners.com">let us know</a> if something is missing.
+Do <a href="mailto:info@bashoneliners.com">let us know</a> if we missed something.
 </p>
 
 <p>Right now the site is still pretty far from what we want it to be.</p>
@@ -24,16 +24,19 @@ Do <a href="mailto:info@bashoneliners.com">let us know</a> if something is missi
         On StackOverflow, answers do not collaborate with each other,
         and very often the accepted answer is not the best solution.
         Very often the combination of multiple answers is the best solution.
-        The goal of this site is a collection of one-liners optimized and perfected by the community.
+        Our goal here is to encourage users to optimize the heck out of every single one-liner until it is perfect.
     </li>
     <li>
         <strong>Gamification:</strong>
         Gamification features are probably crucial to attract more users,
         and for keeping existing users interested.
+        Designing the system is a very complex subject,
+        it takes much more than just coding.
     </li>
 </ul>
 
-<p>To make all these things happen we need more Django coders.</p>
+<p>To make all these things happen we need more Django coders,
+espeically with gamification experience.</p>
 
 <dl class="sourcecode">
     <dt>Get the source code</dt>
