added link to GitHub main page

--- a/oneliners/templates/oneliners/pages/sourcecode.html
+++ b/oneliners/templates/oneliners/pages/sourcecode.html
@@ -39,7 +39,7 @@ Do <a href="mailto:info@bashoneliners.com">let us know</a> if we missed somethin
 espeically with gamification experience.</p>
 
 <dl class="sourcecode">
-    <dt>Get the source code</dt>
+    <dt>Get the source code -- {{ 'https://github.com/janosgyerik/bashoneliners'|urlize }}</dt>
     <dd>
         <pre>git clone https://github.com/janosgyerik/bashoneliners.git</pre>
     </dd>
