--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -18,42 +18,17 @@ bashoneliners.com
 
 {% block content %}
 
-<p>
-Welcome to <strong>bashoneliners.com</strong>,
-a collection of <strong>high quality and well-explained bash one-liners</strong>
-that can be useful in
-GNU/Linux, UNIX, BSD, and similar systems.
-Post your cool bash one-liners to share with the world and promote scripting best practices.
-Or you can search our database of existing one-liners contributed by others.
-</p>
-
-<p>
-Shell scripting can be an ugly business.
-It is easy to write quick and dirty, poor quality hacks that only a few hardcore hackers understand.
-Our goal is to gather high quality, clean, nicely written,
-well-explained one-liners
-that conform to today's best practices,
-and do something useful in real life.
-Either that, or pure awesome wicked cool one-liners can be OK too.
-</p>
-
-<p>
-To get the latest bash one-liners, follow our <a href="{% url 'oneliners.feeds.oneliner' %}">rss feed</a>
-or <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter.
-If you discover problems,
-you can either <a href="https://github.com/janosgyerik/bashoneliners/issues">report bugs on GitHub</a>,
-or send an email to our <a href="mailto:bashoneliners@googlegroups.com">public mailing list</a>,
-or send us a <a href="mailto:info@bashoneliners.com">private email</a>.
-</p>
-
 <div class="alert alert-block alert-info">
-The site is still pretty far from what we want it to be.
-Mainly we need more Django coders,
-but also reviewers and helpful comments on the not-so-well-written one-liners.
-At the minimum it would help a lot if you could spread the word and talk about this site on Twitter, Google+, Facebook,
-or your other social outlets. All of them.
-If you want to help with coding in Django,
-please take a look at our <a href="{% url 'oneliners.views.sourcecode' %} ">Source code page</a>.
+We aim to collect <strong>practical</strong>, 
+<strong>well-explained</strong> bash one-liners,
+and <strong>promote best practices</strong> in shell scripting.
+To get the latest bash one-liners,
+follow <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter,
+or subscribe to our <a href="{% url 'oneliners.feeds.oneliner' %}">rss feed</a>.
+If you find any problems,
+<a href="https://github.com/janosgyerik/bashoneliners/issues">report a bug on GitHub</a>,
+or send an email to our <a href="mailto:bashoneliners@googlegroups.com">public mailing list</a>
+or <a href="mailto:info@bashoneliners.com">private email</a>.
 </div>
 
 <h2>Tags</h2>
