--- a/oneliners/templates/oneliners/pages/sourcecode.html
+++ b/oneliners/templates/oneliners/pages/sourcecode.html
@@ -6,6 +6,14 @@
 
 {% block content %}
 
+<div class="alert alert-block alert-info">
+The site is still pretty far from what we want it to be.
+Mainly we need more Django coders,
+but also reviewers and helpful comments on the not-so-well-written one-liners.
+At the minimum it would help a lot if you could spread the word and talk about this site on Twitter, Google+, Facebook,
+or your other social outlets. All of them.
+</div>
+
 <p>
 This page should give you all the links,
 resources and contact info that you might need to participate in this project.
