--- a/oneliners/templates/oneliners/elements/question.html
+++ b/oneliners/templates/oneliners/elements/question.html
@@ -1,7 +1,7 @@
     <div class="question well question-{{question.pk}}">
 	<h3 class="summary">
 	    <a href="{% url 'oneliners.views.question' question.pk %}">{{ question.summary|capfirst }}</a>
-	    {% if user == question.user %}<a class="btn" href="{% url 'oneliners.views.question_edit' question.pk %}"><i class="icon-pencil"></i>{% if not question.is_published %}<span class="draft">(Not published!)</span>{% endif %}</a>{% endif %}
+	    {% if user == question.user %}<a class="btn btn-default" href="{% url 'oneliners.views.question_edit' question.pk %}"><i class="icon-pencil"></i>{% if not question.is_published %}<span class="draft">(Not published!)</span>{% endif %}</a>{% endif %}
 	</h3>
 	<blockquote>
 	    <p>{{ question.explanation }}</p>
@@ -12,7 +12,7 @@
 	</blockquote>
 
 	{% if not question.is_answered and not nobuttons %}
-	<p><a class="btn" href="{% url 'oneliners.views.oneliner_answer' question.pk %}">Post a one-liner that answers this!</a></p>
+	<p><a class="btn btn-default" href="{% url 'oneliners.views.oneliner_answer' question.pk %}">Post a one-liner that answers this!</a></p>
 	{% endif %}
 
 	{% block related %}
