--- a/oneliners/templates/oneliners/pages/oneliner_comment.html
+++ b/oneliners/templates/oneliners/pages/oneliner_comment.html
@@ -37,7 +37,7 @@
     <div class="form-actions">
 	{% include 'oneliners/elements/please_login.html' %}
 	<button class="btn btn-primary" type="submit" name="submit" value="Post">Post</button>
-	<button class="btn"><a href="{{ cancel_url }}">Cancel</a></button>
+	<button class="btn btn-default"><a href="{{ cancel_url }}">Cancel</a></button>
     </div>
 </form>
 
