--- a/oneliners/templates/oneliners/elements/question_edit_form.html
+++ b/oneliners/templates/oneliners/elements/question_edit_form.html
@@ -32,7 +32,7 @@
 	<div class="form-actions">
 	    {% include 'oneliners/elements/please_login.html' %}
 	    {% for action in form.actions %}<button type="submit" name="action" class="btn {{ action.cssclass }}" value="{{ action.name }}">{{ action.name }}</button>{% endfor %}
-	    <button class="btn"><a href="{{ cancel_url }}">Cancel</a></button>
+	    <button class="btn btn-default"><a href="{{ cancel_url }}">Cancel</a></button>
 	</div>
     </div>
 </form>
