--- a/oneliners/templates/oneliners/pages/profile_edit.html
+++ b/oneliners/templates/oneliners/pages/profile_edit.html
@@ -44,7 +44,7 @@
 	<div class="form-actions">
 	    {% include 'oneliners/elements/please_login.html' %}
 	    <button type="submit" name="action" class="btn btn-primary" value="Save">Save</button>
-	    <button class="btn"><a href="{{ cancel_url }}">Cancel</a></button>
+	    <button class="btn btn-default"><a href="{{ cancel_url }}">Cancel</a></button>
 	</div>
     </div>
 </form>
